# rust-kickstart

./: .env.example  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  Cargo.toml  Dockerfile  IMPLEMENTATION_SUMMARY.md  MIGRATION_UPTRACE_TO_SIGNOZ.md  Makefile  OBSERVABILITY.md  README.md  TEST_INTEGRATION.md  TRACING_GUIDE.md  TROUBLESHOOTING_OBSERVABILITY.md  clippy.toml  debug-signoz.sh  docker-compose.observability.yaml  docker-compose.yml  migrate-to-signoz.sh  otelcol-config.yaml  rustfmt.toml  signoz-config.yaml  signoz-otel-collector-config.yaml  signoz-otel-config.yaml  start-observability.sh  uptrace.yml
.github/workflows/: ci.yml
.sqlx/: query-02f44fe610b10f6b775ddac5d0b9bfbb89bb9918d028ced13cc461ef9bc8d8d0.json  query-456a6b71961aa13dcbc97723a5265501d4356f9d18a07ce2378a33f38dbf209d.json  query-7f2a00fae4c3ee7111449d0bee97105ca70509612593deb0b1dbce11a9f9cf66.json  query-e48f6b313ea975e44c06084cb232f1e7b05f1f657a4a0ca914d06221c2f70734.json
examples/: architecture_demo.rs  example.rs
migrations/: 20250918000000_create_users_table.sql  20250919000000_add_created_at_to_users.sql
src/: health.rs  lib.rs  main.rs
src/bank/: mod.rs  service.rs
src/config/: app.rs  database.rs  mod.rs  server.rs  tracing.rs
src/pagination/: mod.rs
src/user/: controller.rs  domain.rs  mod.rs  repository.rs  service.rs
src/user/services/: create.rs  delete.rs  mod.rs  read.rs  update.rs  utils.rs
src/user/sql/: find_user_by_id.sql
src/user/validation/: common.rs  create.rs  mod.rs  rules.rs  update.rs
tests/: integration_bank_user.rs  integration_health.rs  integration_tests.rs  integration_user.rs
tests/common/: mod.rs
