[package]
name = "rust-kickstart"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "postgres", "macros", "migrate" ] }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
utoipa = { version = "5.2", features = ["axum_extras"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-http = { version = "0.6.2", features = ["trace"] }

[dev-dependencies]
tower = "0.5.1"
http-body-util = "0.1.2"
uuid = { version = "1.11.0", features = ["v7"] }
