[package]
name = "rust-kickstart"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = [ "runtime-tokio", "postgres", "macros", "migrate" ], default-features = false }
tokio = { version = "1.47.1", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15"
utoipa = { version = "5.2", features = ["axum_extras"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tower-http = { version = "0.6.2", features = ["trace"] }

[dev-dependencies]
tower = "0.5.1"
http-body-util = "0.1.2"
uuid = { version = "1.11.0", features = ["v7"] }

# Linting and development tools
[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
# Pedantic lints
pedantic = "warn"
# Restriction lints for better code quality
clone_on_ref_ptr = "warn"
create_dir = "warn"
dbg_macro = "warn"
decimal_literal_representation = "warn"
exit = "warn"
filetype_is_file = "warn"
float_cmp_const = "warn"
get_unwrap = "warn"
let_underscore_must_use = "warn"
lossy_float_literal = "warn"
map_err_ignore = "warn"
mem_forget = "warn"
missing_docs_in_private_items = "warn"
multiple_inherent_impl = "warn"
panic = "warn"
panic_in_result_fn = "warn"
print_stderr = "warn"
print_stdout = "warn"
rc_buffer = "warn"
rc_mutex = "warn"
rest_pat_in_fully_bound_structs = "warn"
same_name_method = "warn"
self_named_module_files = "warn"
str_to_string = "warn"
string_add = "warn"
string_to_string = "warn"
todo = "warn"
unimplemented = "warn"
unnecessary_self_imports = "warn"
unneeded_field_pattern = "warn"
unreachable = "warn"
unwrap_in_result = "warn"
unwrap_used = "warn"
use_debug = "warn"
verbose_file_reads = "warn"
wildcard_enum_match_arm = "warn"

[lints]
workspace = true
